Bug 154683 - XML Form Document: Named folder "Instance 1" appears as "Instance" before chosen.
Summary: XML Form Document: Named folder "Instance 1" appears as "Instance" before cho...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: XML_Form
  Show dependency treegraph
 
Reported: 2023-04-06 14:44 UTC by Robert Großkopf
Modified: 2025-01-01 06:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot, which shows the different names for the same object "Instance 1" (42.56 KB, application/pdf)
2023-04-06 14:44 UTC, Robert Großkopf
Details
Hpe this will show the pane for Instance 1 | Submissions … (9.88 KB, application/vnd.oasis.opendocument.text)
2023-04-09 14:21 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2023-04-06 14:44:34 UTC
Created attachment 186518 [details]
Screenshot, which shows the different names for the same object "Instance 1"

Open any XML form document (for example https://bugs.documentfoundation.org/attachment.cgi?id=186509).
Switch at the right from "Instance 1" to "Bindings".
Save this document and close it.
Document will now open with folder "Bindings".
Folder "Instance 1" will appear as "Instance".
Switch to folder "Instance".
Folder will be renamed as "Instance 1".

This special folder save the name of the xml-instance. The name is "Instance 1" as default name. You could rename "Instance 1" to, lets say, "Person". Renaming is possible by the drop down at the right bottom. This folder should never been translated and should never shown wrong by any internal function.
Comment 1 Robert Großkopf 2023-04-06 14:50:06 UTC
This bug doesn't appear in LO 5.4.6, first appears here in LO 6.1.5. It's a regression
Comment 2 Julien Nabet 2023-04-09 11:07:48 UTC
When opening the example file, the right pane (with instance, model, etc.) doesn't appear, it appears only if I create a new XML form.

I tried different options in View menu but don't know how to make the right pane appear.
Comment 3 Robert Großkopf 2023-04-09 14:21:38 UTC
Created attachment 186552 [details]
Hpe this will show the pane for Instance 1 | Submissions …

Seems the properties are hidden in right of the screen. There is a button "Data Navigator" (looks here '</>'), which should hide this properties.
Comment 4 Julien Nabet 2023-04-10 14:31:56 UTC
(In reply to Robert Großkopf from comment #3)
> Created attachment 186552 [details]
> Hpe this will show the pane for Instance 1 | Submissions …
> 
> Seems the properties are hidden in right of the screen. There is a button
> "Data Navigator" (looks here '</>'), which should hide this properties.

Still not :-(
Comment 5 Robert Großkopf 2023-04-11 07:07:48 UTC
(In reply to Julien Nabet from comment #4)
> (In reply to Robert Großkopf from comment #3)
> > Created attachment 186552 [details]
> > Hpe this will show the pane for Instance 1 | Submissions …
> > 
> > Seems the properties are hidden in right of the screen. There is a button
> > "Data Navigator" (looks here '</>'), which should hide this properties.
> 
> Still not :-(

Your not the only one who gets problems here. Seems to be another buggy behavior. Might be it will work with KDE here, but not with other Window managers.

Might be this screenshot for bug 154337 helps:
https://bugs.documentfoundation.org/attachment.cgi?id=186573
Comment 6 Julien Nabet 2023-04-11 12:05:37 UTC
I used "export SAL_USE_VCLPLUGIN=kf5" and still no pane.

Caolán: any idea why the pane doesn't display? Did I miss something?
Comment 7 Buovjaga 2023-04-14 14:10:35 UTC
(In reply to Robert Großkopf from comment #0)
> Created attachment 186518 [details]
> Screenshot, which shows the different names for the same object "Instance 1"
> 
> Open any XML form document (for example
> https://bugs.documentfoundation.org/attachment.cgi?id=186509).
> Switch at the right from "Instance 1" to "Bindings".

Do you mean we should see this in the Sidebar?

I doesn't work for me.

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4fffaa538e38d7e12553f204f61fdd45795efdcf
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 14 April 2023
Comment 8 Buovjaga 2023-04-14 14:12:05 UTC
(In reply to Buovjaga from comment #7)
> (In reply to Robert Großkopf from comment #0)
> > Created attachment 186518 [details]
> > Screenshot, which shows the different names for the same object "Instance 1"
> > 
> > Open any XML form document (for example
> > https://bugs.documentfoundation.org/attachment.cgi?id=186509).
> > Switch at the right from "Instance 1" to "Bindings".
> 
> Do you mean we should see this in the Sidebar?
> 
> I doesn't work for me.
> 
> Arch Linux 64-bit, X11
> Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
> Build ID: 4fffaa538e38d7e12553f204f61fdd45795efdcf
> CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
> Locale: fi-FI (fi_FI.UTF-8); UI: en-US
> Calc: threaded
> Built on 14 April 2023

It does show in 7.5

Arch Linux 64-bit, X11
Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
7.5.2-1
Calc: CL threaded
Comment 9 Buovjaga 2023-04-14 14:17:31 UTC
(In reply to Robert Großkopf from comment #1)
> This bug doesn't appear in LO 5.4.6, first appears here in LO 6.1.5. It's a
> regression

Bibisect repos on Linux 6.1, 6.0, 5.4 don't show the sidebar thing. Quickly tested on Windows and repo 6.1 doesn't show it either. So I can't investigate with bibisect.
Comment 10 Robert Großkopf 2023-04-14 15:43:59 UTC
(In reply to Buovjaga from comment #9)
> (In reply to Robert Großkopf from comment #1)
> > This bug doesn't appear in LO 5.4.6, first appears here in LO 6.1.5. It's a
> > regression
> 
> Bibisect repos on Linux 6.1, 6.0, 5.4 don't show the sidebar thing. Quickly
> tested on Windows and repo 6.1 doesn't show it either. So I can't
> investigate with bibisect.

If you won't see the sidebar when opening such a document a second time you couldn't edit an XML Form Document after you have saved and closed. So this kind of Form Documents are nearly unusable in you systems. 
Never had this buggy behavior here. Will get this in every *.rpm packed version of LO here, also the daily builds. 
You have seen it with the special build of Arch but not with build of LibreOffice.

Don't know what to do now. I couldn't report this as bug of the deb-packages, because I couldn't test it here.
Comment 11 Julien Nabet 2023-04-15 09:56:01 UTC
I found a way to make appear the pane.
- Launch LO, create a new XML Form
- Close LO
Now when you open "Test_Calculate.odt", the right pane appears.
It will until you reset your LO profile.
Comment 12 Julien Nabet 2023-04-15 09:58:26 UTC
I could reproduce the bug.
Comment 13 Julien Nabet 2023-04-15 10:29:08 UTC
The "Instance 1" appears when XFormsPage::LoadInstance from svx/source/form/datanavi.cxx is called (see https://opengrok.libreoffice.org/xref/core/svx/source/form/datanavi.cxx?r=116b9d6d#1130)
Before the LoadInstance method is called, it will display "Instance".

LoadInstance is only called from "XFormsPage::SetModel", this one tests on which part we are: Instance, Submission, Binding, it's only when we're in Instance part that the method is called.

So if you save the file at a moment where Instance was selected, you'll get "Instance 1" when reopen the file, if "Binding" (as you tested) or "Submission", you'll get "Instance" by default until you click on "Instance".

Now perhaps we should load all instances and perhaps also submissions and bindings and just call m_pNaviWin->AddContainerBroadcaster with the container depending on which tab we are ?
Comment 14 Buovjaga 2023-04-15 11:20:15 UTC
Thanks, Julien. With that tip it was easy to bibisect with linux-64-6.0 to 9b8828174dca6971d2490844b4c6cab2b9d57b8d
turn implicit container explicit in buildable notebooks
Comment 15 Robert Großkopf 2023-04-15 12:59:27 UTC
Hi Julien, hi Buovjaga,

good teamwork here!

Robert
Comment 16 Julien Nabet 2023-04-23 06:50:01 UTC
(In reply to Robert Großkopf from comment #3)
> Created attachment 186552 [details]
> Hpe this will show the pane for Instance 1 | Submissions …
> 
> Seems the properties are hidden in right of the screen. There is a button
> "Data Navigator" (looks here '</>'), which should hide this properties.

I finally found it, it was the icon bar at bottom of the screen (I was searching in top icon bar) so no need to use some workaround to make the data navigator appear.
Comment 17 Caolán McNamara 2024-12-28 22:05:07 UTC
Interestingly enough if I use AOO and select tab 3, bindings, exit and reload, it also shows "Instance" for tab 1 until activated, at which point it changes to "Instance 1". This might have come and gone as a bug a few times.
Comment 18 Caolán McNamara 2024-12-28 22:05:31 UTC
Lets try https://gerrit.libreoffice.org/c/core/+/179497 for this
Comment 19 Commit Notification 2024-12-29 11:48:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1389f4666bf4a4e05bdb1582f827887332d92167

Resolves: tdf#154683 select the saved page after loading the Model

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Caolán McNamara 2024-12-29 11:48:33 UTC
done in trunk, backport to 25.02 in gerrit
Comment 21 Commit Notification 2025-01-01 06:57:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/059eb5a1ae635e7069a765f9bf3d14f24f0ada9f

Resolves: tdf#154683 select the saved page after loading the Model

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.