Resolves: tdf#154683 select the saved page after loading the Model

The default Instance page needs to be selected at LoadModel time in
order to get its tab text updated automatically. Easiest thing to do
here is to load with the default page selected and restore the user's
saved page afterwards.

Change-Id: I4ac5231894834f258d33108e4ebcb2f0af062922
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179497
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>